# DOVE

./: pyproject.toml
scripts/: visualize_comprehensive.py
src/: main.py
src/application/dto/: backtest_result.py
src/application/service/: backtest_service.py
src/domain/market/: candle.py  candle_chart.py  candle_unit.py  ticker.py
src/domain/portfolio/: portfolio.py  position.py
src/domain/shared/: money.py
src/domain/strategy/: asset_evaluator.py  portfolio_strategy.py  strategy.py  trading_signal.py
src/domain/strategy/presets/: always_buy_evaluator.py  bollinger_band_evaluator.py  bollinger_band_strategy.py  buy_and_hold_strategy.py
src/domain/technical/: bollinger_bands.py  ema.py  indicator.py  macd.py  moving_average.py  rsi.py
src/infrastructure/market/: pykrx_data_provider.py
src/ports/: market_data_provider.py
tests/integration/: test_backtest_service.py  test_bollinger_scenario.py  test_buy_and_hold_scenario.py  test_market_data_provider.py  test_portfolio_scenario.py
tests/unit/domain/market/: test_candle.py  test_candle_chart.py  test_candle_chart_validation.py  test_candle_unit.py  test_ticker.py
tests/unit/domain/portfolio/: test_portfolio.py  test_position.py
tests/unit/domain/shared/: test_money.py
tests/unit/domain/strategy/: test_asset_evaluator.py  test_bollinger_band_evaluator.py  test_portfolio_strategy.py  test_presets.py
tests/unit/domain/technical/: test_bollinger_bands.py  test_ema.py  test_macd.py  test_moving_average.py  test_rsi.py
