[project]
name = "dove"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pykrx>=1.0.46",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "ta>=0.11.0",
    "setuptools>=69.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",
    "mplfinance>=0.12.10b0",
    "pydantic>=2.0.0",
    "pytest>=9.0.0",
    "yfinance>=1.0",
]

[dependency-groups]
dev = ["ruff>=0.14.10", "ty>=0.0.10"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
[tool.ty.src]
# tests 폴더는 타입 체크 제외
exclude = ["tests/"]
